fixed overflowing

--- a/src/pages/styles/App.css
+++ b/src/pages/styles/App.css
@@ -9,10 +9,11 @@
 
 .mainPage {
   min-height: 100vh;
+  height: 100% !important;
   background-color: var(--bg-primary);
   color:var(--text-primary);
   background-image: var(--bg);
-  background-size: auto;
+  overflow-x: hidden;
 }
 
 .app {
@@ -21,5 +22,4 @@
   justify-content: center;
   align-items: center;
 }
-
 
